--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic-extra-types = "^2.7.0"
 pycountry = "^23.12.11"
 phonenumbers = "^8.13.36"
 pendulum = "^3.0.0"
+pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
