test: added start of tests for ci pipeline

--- a/.github/workflows/test_integration.yml
+++ b/.github/workflows/test_integration.yml
@@ -79,4 +79,5 @@ jobs:
         if: always()
         run: |
           source $VENV
+          echo ${{ secrets.PYTEST_CREDENTIALS }} > tests/test_creds.json
           poetry run pytest
