--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,41 +12,41 @@ pyrevolut = "pyrevolut.cli.main:app"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-httpx = "^0.27.0"
-pydantic = { extras = ["email"], version = "^2.7.1" }
-pydantic-extra-types = "^2.7.0"
-pycountry = "^23.12.11"
-phonenumbers = "^8.13.36"
-pendulum = "^3.0.0"
-pyjwt = { extras = ["crypto"], version = "^2.8.0" }
-cryptography = "^41.0.3"
-authlib = "^1.3.0"
-typer = "^0.12.3"
+httpx = "0.*"
+pydantic = { extras = ["email"], version = "2.*" }
+pydantic-extra-types = "2.*"
+pycountry = "23.*"
+phonenumbers = "8.*"
+pendulum = "3.*"
+pyjwt = { extras = ["crypto"], version = "2.*" }
+cryptography = "42.*"
+authlib = "1.*"
+typer = "0.*"
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "^3.7.0"
-ipykernel = "^6.29.4"
-commitizen = "^3.25.0"
+pre-commit = "3.*"
+ipykernel = "6.*"
+commitizen = "3.*"
 
 [tool.poetry.group.test.dependencies]
-pytest-asyncio = "^0.21.0"
-pytest = "^7.3.1"
-pytest-xdist = { extras = ["psutil"], version = "^3.3.1" }
-pytest-cov = "^4.1.0"
+pytest-asyncio = "0.*"
+pytest = "7.*"
+pytest-xdist = { extras = ["psutil"], version = "3.*" }
+pytest-cov = "4.*"
 ruff = "*"
-black = "^24.4.2"
-pytest-sugar = "^0.9.7"
-pytest-instafail = "^0.5.0"
-pytest-profiling = "^1.7.0"
-pytest-memray = "^1.5.0"
-pytest-randomly = "^3.15.0"
-pytest-clarity = "^1.0.1"
-pytest-network = "^0.0.1"
-pytest-resource-usage = "^1.0.0"
-pytest-split = "^0.8.1"
-pytest-env = "^1.1.3"
-locust = "^2.18.1"
-requests-toolbelt = "^1.0.0"
+black = "24.*"
+pytest-sugar = "0.*"
+pytest-instafail = "0.*"
+pytest-profiling = "1.*"
+pytest-memray = "1.*"
+pytest-randomly = "3.*"
+pytest-clarity = "1.*"
+pytest-network = "0.*"
+pytest-resource-usage = "1.*"
+pytest-split = "0.*"
+pytest-env = "1.*"
+locust = "2.*"
+requests-toolbelt = "1.*"
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
