--- a/.github/workflows/test_integration.yml
+++ b/.github/workflows/test_integration.yml
@@ -88,7 +88,7 @@ jobs:
       #   ------------  upload coverage  -----------
       #----------------------------------------------
       - name: 📊 Upload coverage
-        if: always()
+        if: runner.os == 'Linux'
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
