--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   publish:
     strategy:
-      max-parallel: 1
       matrix:
         python-version: [3.11]
     defaults:
@@ -35,11 +34,9 @@ jobs:
       #  -----  install & configure poetry  -----
       #----------------------------------------------
       - name: 📜 Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
+        run: |
+          python -m pip install -U pip poetry
+          poetry --version
 
       #----------------------------------
       #  -----  load cached venv  -----
