--- a/.github/workflows/test_integration.yml
+++ b/.github/workflows/test_integration.yml
@@ -17,10 +17,10 @@ jobs:
       max-parallel: 1
       matrix:
         os: [
-            ubuntu-latest,
-            # windows-latest,
-            macos-latest,
-          ]
+          ubuntu-latest,
+          windows-latest,
+          macos-latest,
+        ]
         python-version: [3.11]
     defaults:
       run:
@@ -49,11 +49,9 @@ jobs:
       #  -----  install & configure poetry  -----
       #----------------------------------------------
       - name: 📜 Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
+        run: |
+          python -m pip install -U pip poetry
+          poetry --version
 
       #----------------------------------
       #  -----  load cached venv  -----
