--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -61,4 +61,4 @@ jobs:
       - name: Build and publish
         env:
           PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-        run: make publish
+        run: make publish-pypi
