ci: adjusted git credentials for building docs

--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -55,6 +55,14 @@ jobs:
         run: |
           poetry install --no-interaction
 
+      # -----------------------------------------------------
+      #   ------------  configure git creds  ------------
+      # -----------------------------------------------------
+      - name: Configure git credentials
+        run: |
+          git config --global user.name github-actions[bot]
+          git config --global user.email user.email 41898282+github-actions[bot]@users.noreply.github.com
+
       #-----------------------------------------------------
       #   ------------  configure mkdocs cache  ------------
       #-----------------------------------------------------
