--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -15,6 +15,10 @@ jobs:
         shell: bash
     environment: ${{ github.base_ref }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pages: write
+      
     steps:
       #----------------------------------------------
       #   ----------- check-out repo  ------------
