--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'docs/**'
+      - 'mkdocs.yml'
+      - '.github/workflows/publish_docs.yml'
 
 jobs:
-  publish:
+  publish-docs:
     strategy:
       matrix:
         python-version: [3.11]
@@ -15,10 +19,13 @@ jobs:
         shell: bash
     environment: ${{ github.base_ref }}
     runs-on: ubuntu-latest
+
+    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
     permissions:
-      contents: write
+      contents: read
       pages: write
-      
+      id-token: write
+
     steps:
       #----------------------------------------------
       #   ----------- check-out repo  ------------
