--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -64,7 +64,7 @@ jobs:
       #----------------------------------------------
       - name: Install dependencies
         run: |
-          poetry install --no-interaction
+          poetry install --no-interaction --only docs
 
       #-----------------------------------------------------
       #   ------------  configure mkdocs cache  ------------
