--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,7 @@ plugins:
   - mkdocstrings:
       handlers:
         python:
-          options:
+          options: # https://mkdocstrings.github.io/python/usage/ or https://mkdocstrings.github.io/python/usage/configuration/headings/#with-root-full-path
             docstring_style: numpy
             show_root_heading: True
             docstring_section_style: table
